# slides

./: clone.sh
170704decogeigeki/: slide.html
170704decogeigeki/app/: Main.hs
170707wrapper/: slide.html  slides.cabal  stack.yaml
170707wrapper/app/: Common.hs  Main.hs
yadorigi/: yadorigi-guidlines.adoc  yadorigi-guidlines.html
