name:                slides
version:             0.1.0.0
synopsis:            @its_out_of_tune's slide's project
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Tokiwo Ousaka
maintainer:          its.out.of.tune.this.my.music@gmail.com
-- copyright:           
category:            Other
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable slides-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , takahashi
                     , lens
                     , mtl
  other-modules:       Common
  default-language:    Haskell2010
